prost-unwrap-proto-tests/tests/ui/with_this_mod_invalid.stderr
error: Parameter argument must be an absolute module path literal, e.g. `crate::proto`
  --> tests/ui/with_this_mod_invalid.rs:11:20
   |
11 |     .with_this_mod("test")
   |                    ^^^^^^
